--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
 
-  <title>Monika Mane Profile</title>
+  <title>Dipak Kadam Profile</title>
   <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div class="profileBody">
 
     <div id="name">
-        <h1>MONIKA MANE</h1>
+        <h1>Dipak Kadam</h1>
         <br>
         <h2>FRONT END ENGINEER</h2>
         <br>
@@ -27,7 +27,8 @@
     <li> Friendly with everyone</li>
 </ul>
 <hr />
-<p><b><strong> Contact Details:</strong> </b><br><br>You can email me at:<a href="mailto:"> manemonika711@gmail.com</a>
+<p><b><strong> Contact Details:</strong> </b><br><br>
+You can email me at:<a href="mailto:"> 7448deep@gmail.com</a>
 </div>
 
 </body>
